--- a/package.json
+++ b/package.json
@@ -3,14 +3,48 @@
   "version": "1.0.0",
   "description": "node.js app using spotify api",
   "main": "app.js",
-  "scripts": {},
+  "scripts": {
+    "start": "nodemon -w dist dist/server.js",
+    "compile-server": "babel server --presets es2015-node6 --out-dir dist --source-maps",
+    "watch-server": "babel server --presets es2015-node6 --out-dir dist --source-maps --watch",
+    "start-hook": "nodemon -w server server/start_hook.js",
+    "compile": "webpack",
+    "watch": "webpack-dev-server --hot --inline",
+    "dev-all": "npm run watch & npm run watch-server & npm start",
+    "dev-all-hook": "npm run watch & npm run start-hook",
+    "lint": "eslint --ext js,jsx src server webpack.config.js"
+  },
   "author": "oscar-21",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "querystring": "^0.2.0",
-    "request": "^2.83.0"
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "request": "^2.83.0",
+    "source-map-support": "^0.5.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.0.1",
+    "babel-loader": "^7.1.2",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-node6": "^0.4.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
+    "nodemon": "^1.12.1",
+    "webpack": "^3.8.1",
+    "webpack-dev-server": "^2.9.3",
+    "whatwg-fetch": "^2.0.3"
   }
 }
